--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
     text-align: center;
 }
 
-.App-logo {
-    height: 40vmin;
-    pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
-}
-
 .App-header {
     background-color: #282c34;
     min-height: 20vh;
@@ -31,29 +20,26 @@
     justify-content: center;
 }
 
+.App-footer {
+    padding: 5vh;
+}
+
 .App-link {
     color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-#nav-menu {
+ul {
     list-style-type: none;
     font-size: calc(10px + 1vmin);
 }
 
-#nav-menu li a, a:visited {
-    text-decoration: none;
+a, a:visited {
     color: white;
 }
 
+#header {
+    width: 100%;
+}
 #header-left {
     text-align: left;
     padding-left: 2vw;
@@ -67,4 +53,32 @@
 .body-div {
     padding-top: 5vh;
     padding-bottom: 5vh;
+    max-width: 50vw;
+}
+
+#links {
+    font-size: calc(8px + 1vmin);
+}
+
+.bold {
+    font-weight: 500;
+}
+
+h2 {
+    color: white;
+    padding: 1vh;
+    background-color: #282c34;
+}
+
+.project-div {
+    margin-bottom: 10vh;
+}
+
+img {
+    padding: 2vh;
+}
+
+video {
+    width: 100%;
+    height: auto;
 }
