Updated responsiveness on mobile, changed image

--- a/src/App.css
+++ b/src/App.css
@@ -37,23 +37,12 @@ a, a:visited {
     color: white;
 }
 
-#header {
-    width: 100%;
-}
-#header-left {
-    text-align: left;
-    padding-left: 2vw;
-}
-
-#header-right {
-    text-align: right;
-    padding-right: 2vw;
-}
-
 .body-div {
     padding-top: 5vh;
     padding-bottom: 5vh;
-    max-width: 50vw;
+    padding-left: 5vw;
+    padding-right: 5vw;
+    max-width: 1000px;
 }
 
 #links {
